		yet, it doesn't really work).
		Updating the Introduction chapter in the documentation with
		a section about the New framework.
		Beginning on M88K bsr and jmp.n instruction implementations,
		function call trace support, etc.
20090803	Continuing on function call trace support.
20090804	Using anonymous unions and ptrdiff_t, to avoid overloading
		pointers and size_t members unsafely, and other size_t usage.
		(Thanks to Weinholt for commenting on this.)
20090807	Getting rid of the last 'delete' call (in MainbusComponent,
		there was a _pointer_ to a memory map, instead of just a
		memory map). The new GXemul framework is thus completely free
		of malloc/free and manual delete. (mmap/munmap are, for natural
		reasons, used though by the RAMComponent.)
		Separating out the dyntrans specific parts of CPUComponent into
		another base class, CPUDyntransComponent, so that it in theory
		is possible to implement non-dyntrans CPUs.
		Partial support for choosing MIPS ABI (affects disassembly and
		register dumps, mostly).
20090810	Beginning on variable write handlers: MIPS zr register is
		read-only, MIPS' model can now be changed correctly, and
		root.accuracy can only be assigned "cycle" or "sloppy".
20090814	Continuing on write handlers for variables (root.step),
		beginning on component tree snapshotting (using Clone). The
		backward-step command now works reasonably well (but the only
		snapshot taken so far is at step=0).
20090815	Reimplementing the M88K br, or_imm, or.u_imm, cmp, cmp_imm,
		and_imm, and.u_imm, mask_imm, mask.u_imm, mak, mak_imm,
		mulu_imm, xor_imm, and xor.u_imm instructions.
20090819	Base OTHERLIBS in configure on LDFLAGS.
20090821	Updating the TODO with thoughts/plans for the "plugin" part
		of the new framework.
20090822	Beginning on a doc/framework.html, describing the new
		framework concepts to end-users.
20090905	Continuing on the dyntrans core: page allocation.
20091207	The dev_ether MAC address can now be read.