@@ -29,7 +29,7 @@ Some things, in no specific order, that I'd like to fix:
 
 MAIN GOAL for 0.6.0:
 
-	Release 0.6.0 (hopefully some time during Summer 2009) when
+	Release 0.6.0 (hopefully some time during Summer 2010) when
 	_something_ in the new framework works well enough to be released.
 
 	The primary goal is testm88k.
